--- a/lib/gradle.properties
+++ b/lib/gradle.properties
@@ -13,8 +13,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-PACKAGE_NAME=com.github.snowdream.android.template.library
-POM_GROUP_ID=com.github.snowdream.android.template
-POM_ARTIFACT_ID=library
-POM_NAME=library
-POM_PACKAGING=aar
+PACKAGE_NAME=com.github.snowdream.android.app.codegenerator
+POM_GROUP_ID=com.github.snowdream.android.app
+POM_ARTIFACT_ID=codegenerator
+POM_NAME=codegenerator
+POM_PACKAGING=jar
